<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.google.gwt.site.webapp</groupId>
    <artifactId>gwt-site-webapp</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>war</packaging>

    <properties>
        <maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
        <appengine.app.version>${maven.build.timestamp}</appengine.app.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <appengine.target.version>1.9.5</appengine.target.version>
        <json.version>20140107</json.version>
        <commons-codec.version>1.9</commons-codec.version>
        <!-- javax -->
        <servlet.version>2.5</servlet.version>

        <gwt.version>2.7.0</gwt.version>
        <gwtquery.version>1.4.2</gwtquery.version>

        <junit.version>4.11</junit.version>

        <!-- plugin -->
        <surefire-plugin.version>2.17</surefire-plugin.version>
        <compiler-plugin.version>3.1</compiler-plugin.version>
        <war-plugin.version>2.4</war-plugin.version>
        <eclipse-plugin.version>2.9</eclipse-plugin.version>
        <appengine.plugin.version>1.9.4</appengine.plugin.version>
    </properties>

    <dependencies>
        <!-- Compile/runtime dependencies -->
        <dependency>
            <groupId>com.google.appengine</groupId>
            <artifactId>appengine-api-1.0-sdk</artifactId>
            <version>${appengine.target.version}</version>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>${servlet.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>${json.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>${commons-codec.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.inject.extensions</groupId>
            <artifactId>guice-servlet</artifactId>
            <version>3.0</version>
        </dependency>

        <!-- Test Dependencies -->
        <dependency>
            <groupId>com.google.appengine</groupId>
            <artifactId>appengine-testing</artifactId>
            <version>${appengine.target.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.appengine</groupId>
            <artifactId>appengine-api-stubs</artifactId>
            <version>${appengine.target.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- UI dependencies -->
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-user</artifactId>
            <version>${gwt.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.googlecode.gwtquery</groupId>
            <artifactId>gwtquery</artifactId>
            <version>${gwtquery.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-dev</artifactId>
            <version>${gwt.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.gwt.site</groupId>
            <artifactId>gwt-site</artifactId>
            <version>${project.version}</version>
            <type>zip</type>
            <classifier>generated-site</classifier>
         </dependency>
    </dependencies>

    <build>
        <testResources>
            <testResource>
                <directory>${basedir}/src/test/java</directory>
            </testResource>
            <testResource>
                <directory>${basedir}/src/test/resources</directory>
            </testResource>
        </testResources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
                <configuration>
                    <excludes>
                        <exclude>**/*GwtTest.java</exclude>
                    </excludes>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler-plugin.version}</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>${war-plugin.version}</version>
                <configuration>
                    <!-- <archiveClasses>true</archiveClasses> -->
                    <webResources>
                        <!-- in order to interpolate version from pom into appengine-web.xml -->
                        <resource>
                            <directory>${basedir}/src/main/webapp/WEB-INF</directory>
                            <filtering>true</filtering>
                            <targetPath>WEB-INF</targetPath>
                        </resource>
                        <!-- copy GWT source code to website for debugging -->
                        <resource>
                            <directory>${basedir}/target/extra/gwtproject/src</directory>
                            <targetPath>src</targetPath>
                        </resource>
                        <!-- copy sourcemaps to website for debugging -->
                        <resource>
                            <directory>${basedir}/target/extra/gwtproject/symbolMaps</directory>
                            <includes>
                                <include>*.json</include>
                            </includes>
                            <targetPath>src</targetPath>
                        </resource>
                    </webResources>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.google.appengine</groupId>
                <artifactId>appengine-maven-plugin</artifactId>
                <version>${appengine.plugin.version}</version>
                <configuration>
                    <version>${appengine.app.version}</version>
                    <address>0.0.0.0</address>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-eclipse-plugin</artifactId>
                <version>${eclipse-plugin.version}</version>
                <configuration>
                    <downloadSources>true</downloadSources>
                    <downloadJavadocs>false</downloadJavadocs>
                    <buildOutputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes
                    </buildOutputDirectory>
                    <projectnatures>
                        <projectnature>org.eclipse.jdt.core.javanature</projectnature>
                        <projectnature>com.google.gdt.eclipse.core.webAppNature</projectnature>
                        <nature>com.google.appengine.eclipse.core.gaeNature</nature>
                        <nature>com.google.gwt.eclipse.core.gwtNature</nature>
                    </projectnatures>
                    <buildcommands>
                        <buildcommand>org.eclipse.jdt.core.javabuilder</buildcommand>
                        <buildcommand>com.google.gdt.eclipse.core.webAppProjectValidator</buildcommand>
                        <buildcommand>com.google.appengine.eclipse.core.projectValidator</buildcommand>
                        <buildcommand>com.google.gwt.eclipse.core.gwtProjectValidator</buildcommand>
                        <buildcommand>com.google.appengine.eclipse.core.enhancerbuilder</buildcommand>
                    </buildcommands>
                    <classpathContainers>
                        <classpathContainer>org.eclipse.jdt.launching.JRE_CONTAINER</classpathContainer>
                        <classpathContainer>com.google.appengine.eclipse.core.GAE_CONTAINER</classpathContainer>
                        <classpathContainer>com.google.gwt.eclipse.core.GWT_CONTAINER</classpathContainer>
                    </classpathContainers>
                    <excludes>
                        <exclude>com.google.gwt:gwt-servlet</exclude>
                        <exclude>com.google.gwt:gwt-user</exclude>
                        <exclude>com.google.gwt:gwt-dev</exclude>
                        <exclude>javax.validation:validation-api</exclude>
                        <exclude>com.google.appengine:appengine-api-1.0-sdk</exclude>
                        <exclude>com.google.appengine:appengine-api-stubs</exclude>
                        <exclude>com.google.appengine:appengine-testing</exclude>
                        <exclude>org.datanucleus:datanucleus-core</exclude>
                        <exclude>org.datanucleus:datanucleus-enhancer</exclude>
                        <exclude>org.datanucleus:datanucleus-jpa</exclude>
                        <exclude>org.datanucleus:datanucleus-api-jdo</exclude>
                        <exclude>com.google.appengine.orm:datanucleus-appengine</exclude>
                    </excludes>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>gwt-maven-plugin</artifactId>
                <version>${gwt.version}</version>
                <executions>
                    <execution>
                        <configuration>
                            <testTimeOut>180</testTimeOut>
                            <includes>**/*GwtTest.java</includes>
                            <mode>htmlunit</mode>
                            <gen>gen</gen>
                            <extraJvmArgs>-Xss1024k -Xmx512M -XX:MaxPermSize=512m</extraJvmArgs>
                            <saveSource>true</saveSource>
                            <module>com.google.gwt.site.webapp.GWTProject</module>
                            <!--
                            Draft and pretty mode are turned on so that beginners can try out debugging
                            in their browser with no setup.
                            Please don't disable this; code size is less important.
                            -->
                            <draftCompile>true</draftCompile>
                            <style>PRETTY</style>
                        </configuration>
                        <goals>
                            <goal>compile</goal>
                            <goal>test</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>unpack-dependencies</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>unpack-dependencies</goal>
                        </goals>
                        <configuration>
                            <includeGroupIds>com.google.gwt.site</includeGroupIds>
                            <includeArtifactIds>gwt-site</includeArtifactIds>
                             <excludeTransitive>true</excludeTransitive>
                            <outputDirectory>${project.build.directory}/www/</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-resources</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/www/gwtproject/</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${project.build.directory}/${project.artifactId}-${project.version}/gwtproject/</directory>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
